examples/passing/TrailingComment.purs
module Main where

  main = Debug.Trace.trace "Done"

  -- Trailing
  -- comments
